# ezcli

./: CHANGELOG.md  CHANGELOG.zh.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh.md  RELEASING.md  RELEASING.zh.md  add_admin_powershell.reg
src/: cmd_encoding.rs  config.rs  env_capture.rs  main.rs  render.rs  wrapper.rs
