[package]
name = "ezcli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.62.2", features = ["Win32_UI_Controls_Dialogs", "Win32_UI_Shell_Common", "Win32_System_Console"] }
winreg = "0.56.0"
