[package]
name = "ezcli-win"
version = "0.1.1"
edition = "2024"
description = "Windows shell helper for developer workflows such as loading MSVC environments and switching projects"
readme = "README.md"
repository = "https://github.com/zexiahaha/ezcli"
license = "MIT OR Apache-2.0"
keywords = ["cli", "windows", "shell", "msvc"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ezcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
windows = { version = "0.62.2", features = [
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Shell_Common",  
    "Win32_Foundation",
    "Win32_System_Com",] }
winreg = "0.56.0"
